--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "UI for student-skills",
   "license": "BSD-3-Clause",
   "engines": {
-    "node": ">8.0.0"
+    "node": ">8.0.0",
+    "npm": ">5.0.0"
   },
   "repository": {
     "type": "git",
@@ -17,18 +18,19 @@
   "homepage": "https://github.com/clandriot/students-skills-ui#readme",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
-    "preinstall": "npm install -g @angular/cli"
+    "preinstall": "npm install -g @angular/cli",
+    "postinstall": "ng build --aot --target=production"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.4.4",
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/animations": "^4.4.3",
     "@angular/cdk": "^2.0.0-beta.11",
+    "@angular/cli": "1.4.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
@@ -37,7 +39,9 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "express": "^4.16.1",
     "rxjs": "^5.4.2",
+    "typescript": "~2.3.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -49,7 +53,6 @@
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "tslint": "~5.3.2"
   }
 }
