--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,9 +3,12 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
-    "module": "es2015",
+    "module": "es2017",
     "types": []
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
