--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "UI for student-skills",
   "license": "BSD-3-Clause",
   "engines": {
-    "node": ">8.0.0",
-    "npm": ">5.0.0"
+    "node": ">8.0.0"
   },
   "repository": {
     "type": "git",
@@ -27,7 +26,7 @@
   "dependencies": {
     "@angular/animations": "^4.4.3",
     "@angular/cdk": "^2.0.0-beta.11",
-    "@angular/cli": "1.4.4",
+    "@angular/cli": "^1.4.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/compiler-cli": "^4.2.4",
