--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/clandriot/students-skills-ui#readme",
   "scripts": {
     "ng": "ng",
-    "start": "nodeserver.js",
+    "start": "node server.js",
     "build": "ng build",
     "preinstall": "npm install -g @angular/cli",
     "postinstall": "ng build --aot --target=production"
@@ -39,6 +39,7 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "express": "^4.16.1",
+    "path": "^0.12.7",
     "rxjs": "^5.4.2",
     "typescript": "~2.3.3",
     "zone.js": "^0.8.14"
