--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "express": "^4.16.1",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
     "path": "^0.12.7",
     "rxjs": "^5.4.2",
     "typescript": "~2.3.3",
@@ -48,6 +50,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/lodash": "^4.14.77",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
