--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build"
+    "build": "ng build",
+    "preinstall": "npm install -g @angular/cli",
+    "postinstall": "ng build --aot --target=production"
   },
   "private": true,
   "dependencies": {
