--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@angular/platform-browser": "^4.4.5",
     "@angular/platform-browser-dynamic": "^4.4.5",
     "@angular/router": "^4.4.5",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
+    "ng2-charts": "^1.6.0",
     "path": "^0.12.7",
     "rxjs": "^5.4.2",
     "typescript": "~2.3.3",
