--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "UI for student-skills",
   "license": "BSD-3-Clause",
   "engines": {
-    "node": ">8.0.0"
+    "node": "^8.9.0"
   },
   "repository": {
     "type": "git",
