--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
+    "updateenv": "node ./scripts/replace.build.js",
     "preinstall": "npm install -g @angular/cli",
-    "postinstall": "ng build --aot --target=production"
+    "postinstall": "npm run updateenv && ng build --aot --target=production"
   },
   "private": true,
   "dependencies": {
@@ -58,6 +59,7 @@
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "replace-in-file": "^3.1.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2"
   }
