set max memory for node process

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/clandriot/students-skills-ui#readme",
   "scripts": {
     "ng": "ng",
-    "start": "npm run updateenv && ng build --aot --target=production && node server.js",
+    "start": "npm run updateenv && ng build --aot --target=production && node --optimize_for_size --max_old_space_size=460 server.js",
     "build": "ng build",
     "updateenv": "node ./scripts/replace.build.js",
     "preinstall": "npm install -g @angular/cli"
